index: fix markdown hint on mobile.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -337,3 +337,8 @@ li[data-comment]
 .collapsible-body
 span
 p { margin: 0; }
+
+#markdownHint {
+    font-weight: lighter;
+    font-size: small;
+}
